--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,9 +240,9 @@ h1, h2, h3, h4, h5, h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  width: 100%;
+  width: 100%;  
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  background: url("../img/hero-bg2.jpeg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
